--- a/traffic_pretrained__model.ipynb
+++ b/traffic_pretrained__model.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1luSLYwkDBY4UJA6SBUu5PXvZ9nfCntQ0",
+      "authorship_tag": "ABX9TyPXP13PdGCaVdj+glrRbT76",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/apgis/ai_traffic_analyzer/blob/main/traffic_pretrained__model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -528,12 +541,186 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!git config --global user.email \"apg65800@gmail.com\""
+      ],
       "metadata": {
         "id": "vfuheNAUK6rE"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git config --global user.name \"apgis\""
+      ],
+      "metadata": {
+        "id": "7dVcHfb4pJZz"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/apgis/ai_traffic_analyzer.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Coln4sCLptLF",
+        "outputId": "b3a3f8a1-f4be-40f0-aa59-a8be5cec4cd6"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'ai_traffic_analyzer'...\n",
+            "warning: You appear to have cloned an empty repository.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd ..\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qRA8VHrDsNyM",
+        "outputId": "dc14f408-6c5c-4b68-973a-3060705e9751"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!mv traffic_pretrained__model.ipynb traffic_analyzer/\n",
+        "%cd traffic_analyzer\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m2NlKBzAunW1",
+        "outputId": "f65653a6-ebd3-4c1b-ebef-4f9c30d411b1"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mv: cannot stat 'traffic_pretrained__model.ipynb': No such file or directory\n",
+            "[Errno 2] No such file or directory: 'traffic_analyzer'\n",
+            "/content/traffic_analyzer\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls /content\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SLdQLNE2wJv5",
+        "outputId": "e8038f6f-1cc3-455e-b17b-e8b70af65d27"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sample_data  traffic_analyzer\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile requirements.txt\n",
+        "torch\n",
+        "ultralytics\n",
+        "opencv-python\n",
+        "matplotlib\n",
+        "gradio\n",
+        "pandas\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Xaq7YvExAbm",
+        "outputId": "05eb745f-c541-46f1-c09b-6799786fb0da"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing requirements.txt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile README.md\n",
+        "# Traffic Prediction with YOLO + LSTM 🚦\n",
+        "\n",
+        "This project uses YOLO for real-time vehicle detection and LSTM for traffic forecasting.\n",
+        "\n",
+        "## Features\n",
+        "- Vehicle detection from images\n",
+        "- Traffic pattern prediction using LSTM\n",
+        "- Gradio UI for interactive testing\n",
+        "\n",
+        "## To run:\n",
+        "```bash\n",
+        "pip install -r requirements.txt\n",
+        "python app.py\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UpfDQGdyxOvG",
+        "outputId": "b07d611c-a9b5-4a6e-8aa2-9d44dc89ab4c"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing README.md\n"
+          ]
+        }
+      ]
     }
   ]
 }
